        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=11686
        WebKit draws Carto.net tabgroup example completely incorrectly (ff does fine)

        Make sure the SVG render objects are laid out before measuring their
        dimensions using relativeBBox.



Canonical link: https://commits.webkit.org/15131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18032 268f45cc-cd09-0410-ab3c-d52691b4dbfc