WebCore/ksvg2/svg/SVGLocatable.cpp
@@ -76,8 +76,11 @@ SVGElement* SVGLocatable::farthestViewportElement(const SVGStyledElement* e)
 FloatRect SVGLocatable::getBBox(const SVGStyledElement* e)
 {
     FloatRect bboxRect;
-    
+
     if (e && e->renderer()) {
+        // Need this to make sure we have render object dimensions.
+        // See bug 11686.
+        e->document()->updateLayoutIgnorePendingStylesheets();
         bboxRect = e->renderer()->relativeBBox(false);
         bboxRect.setSize(bboxRect.size() - FloatSize(1, 1)); // FIXME: Why -1 here?
     }
